[SPv175] Ensure border radius clip mask layer contents are not scrolled.

This patch ensures that when we paint the mask layer that is generated
as a result of an inner border radius clip, we use the transform from
LocalBorderBoxProperties, which does not include the scroll offset
from the scrolled contents.

R=chrishtr@chromium.org, trchen@chromium.org

Bug: 814664
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I4ba134134dda367e6ddc9d7005a6ff8ae7003426
Reviewed-on: https://chromium-review.googlesource.com/938319
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539879}
Former-commit-id: 857b89fe4bb8843f8f8074a8545e5a51b22a9166